// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component matches snapshot for default placeholder 1`] = `
<div
  class="flex-shrink-0 rounded-full bg-indigo-100 flex items-center justify-center text-gray-700 font-medium overflow-hidden"
  style="width: 40px; height: 40px;"
>
  <img
    alt="avatar"
    class="object-cover rounded-full"
    height="40"
    src="http://localhost:8000/static/default-avatar.svg"
    width="40"
  />
</div>
`;

exports[`Avatar component matches snapshot with initials 1`] = `
<div
  class="flex-shrink-0 rounded-full bg-indigo-100 flex items-center justify-center text-gray-700 font-medium overflow-hidden"
  style="width: 40px; height: 40px;"
>
  <span>
    A
  </span>
</div>
`;
